# -Microservice_Learning-Dockerfile

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: __main__.py
src/router/: health_check.py
