[tool.poetry]
name = "hw-echo-serv"
version = "0.1.0"
description = ""
authors = ["Beilak <beylak@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.93.0"
uvicorn = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
